fix username & history display problem

--- a/userlist.html
+++ b/userlist.html
@@ -70,7 +70,7 @@
 /*
     // Helper to get hash from end of URL or generate a random one.
     function getExampleRef() {
-      var ref = new Firebase('https://torrid-fire-1022.firebaseio.com');
+      var ref = new Firebase('https://torrid-fire-1022.firebaseio.com/firepad/001');
       var hash = window.location.hash.replace(/#/g, '');
       if (hash) {
         ref = ref.child(hash);
